--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
                 <div class="navsec">
                 <ul><h2>lorum</h2>
-                <li><a href="#">Error</a></li>
-                <li><a href="#">koal</a></li>
-                <li><a href="#">aso</a></li>
-                <li><a href="#">ewdi</a></li></ul>
+                <li><a href="tribute/tribute.html">Tribute project</a></li>
+                <li><a href="movieposter/movieposter project/">movie poster project</a></li>
+                <li><a href="login/login/">login (yt help)</a></li>
+                
             </div>
             </div>
             <div class="spotify-embed">
