--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 
 
                 <div class="navsec">
-                <ul><h2>lorum</h2>
+                <ul><h2>Projects</h2>
                 <li><a href="tribute/tribute.html">Tribute project</a></li>
                 <li><a href="movieposter/movieposter project/">movie poster project</a></li>
                 <li><a href="login/login/">login (yt help)</a></li>
